--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,19 @@
 beautifulsoup4==4.12.3
+blinker==1.8.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+click==8.1.7
+flask==3.0.3
+flask-cors==4.0.1
+fuzzywuzzy==0.18.0
 idna==3.6
+itsdangerous==2.2.0
+jinja2==3.1.4
+levenshtein==0.25.1
+markupsafe==2.1.5
+python-levenshtein==0.25.1
+rapidfuzz==3.9.0
 requests==2.31.0
 soupsieve==2.5
 urllib3==2.1.0
+werkzeug==3.0.3
